--- a/gallery.html
+++ b/gallery.html
@@ -108,7 +108,7 @@
         const deltaX = e.changedTouches[0].screenX - touchstartX;
         const deltaY = e.changedTouches[0].screenY - touchstartY;
         
-        if (Math.abs(deltaX) > Math.abs(deltaY)) {
+        if (Math.abs(deltaX * 2.5) > Math.abs(deltaY)) {
             e.preventDefault(); // Prevent default scrolling
         }
     }, { passive: false });
